# PKGBUILDS

./: .gitattributes  .gitignore  README.md  automate-package-build.sh  automate-package-cleanup.sh  automate-package-inject-mirror.sh  state
.github/: FUNDING.yml
EncryptOS-skel-default/: PKGBUILD
EncryptOS-skel-xfce4/: PKGBUILD
EndeavourOS-archiso-builder/: PKGBUILD
akm/: PKGBUILD  README.md  akm  akm-2.9.4-1-any.pkg.tar.zst  akm-2.9.4-1-any.pkg.tar.zst.sig
arc-gtk-theme-eos/: PKGBUILD  arc-gtk-theme-eos-20220405-1-any.pkg.tar.zst
arc-gtk-theme-eos/src/arc-theme-20220405/: HACKING.md  INSTALL.md  README.md  meson.build  meson_options.txt
arc-gtk-theme-eos/src/arc-theme-20220405/common/: index.theme.in  meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/cinnamon/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/cinnamon/3.8/sass/: _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/cinnamon/4.0/sass/: _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/cinnamon/4.2/sass/: _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/cinnamon/4.6/sass/: _colors.scss  _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/cinnamon/5.2/sass/: _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/3.28/sass/: _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/3.30/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme.gresource.xml
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/3.30/sass/: _common.scss  gnome-shell.scss.in
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/3.32/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme-lighter.gresource.xml  gnome-shell-theme.gresource.xml
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/3.32/sass/: _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/3.34/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme-lighter.gresource.xml  gnome-shell-theme.gresource.xml
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/3.34/sass/: _colors.scss  _common.scss  _drawing.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/3.36/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme-lighter.gresource.xml  gnome-shell-theme.gresource.xml
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/3.36/sass/: _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/3.38/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme-lighter.gresource.xml  gnome-shell-theme.gresource.xml
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/3.38/sass/: _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/40/gresource/: gnome-shell-theme.gresource.xml
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/40/sass/: _colors.scss  _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/41/gresource/: gnome-shell-theme-dark.gresource.xml
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/41/sass/: _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/42/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme.gresource.xml
arc-gtk-theme-eos/src/arc-theme-20220405/common/gnome-shell/42/sass/: _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/gtk-2.0/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/gtk-2.0/assets-dark/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/gtk-2.0/assets-light/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/gtk-3.0/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/gtk-3.0/assets/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/gtk-3.0/sass/: _applications.scss  _budgie.scss  _common.scss  _drawing.scss  _libhandy.scss  _lightdm.scss  _transparent_widgets.scss  _unity.scss  gtk.scss.in
arc-gtk-theme-eos/src/arc-theme-20220405/common/gtk-4.0/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/gtk-4.0/sass/: _colors.scss  _common.scss
arc-gtk-theme-eos/src/arc-theme-20220405/common/metacity-1/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/plank/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/unity/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/xfwm4/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/xfwm4/dark/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/common/xfwm4/light/: meson.build
arc-gtk-theme-eos/src/arc-theme-20220405/meson/: install-file.py  render-assets.py
b43-firmware/: b43-firmware-6.30.163.46-1-any.pkg.tar.zst
calamares_config_ce/: PKGBUILD  calamares_config_ce-10.0.0-1-any.pkg.tar.zst  calamares_config_ce-10.1.0-1-any.pkg.tar.zst
calamares_config_default/: PKGBUILD  calamares_config_default-10.1.0-1-any.pkg.tar.zst
calamares_current/: PKGBUILD
ckbcomp/: PKGBUILD  ckbcomp-1.207-1-any.pkg.tar.zst
encryptos-app/: EncryptOS-app.desktop  PKGBUILD  encryptos-app.desktop
encryptos-desktop/: Encrypt-OS.desktop  PKGBUILD
encryptos-developer-mirrorlist/: PKGBUILD  endeavouros-developer-mirrorlist
encryptos-keyring/: Encrypt-OS-keyring-1-5-any.pkg.tar.zst  EncryptOS-keyring.install  PKGBUILD  encryptos-keyring.install  endeavouros-keyring.install
encryptos-mirrorlist/: Encrypt-OS-mirrorlist-4.4.2-1-any.pkg.tar.zst  PKGBUILD
encryptos-skel-default/: PKGBUILD
encryptos-skel-i3wm/: PKGBUILD
encryptos-skel-xfce4/: PKGBUILD
encryptos-theming/: EncryptOS-theming.install  PKGBUILD
encryptos-xfce4-terminal-colors/: PKGBUILD
endeavouros-keyring/: PKGBUILD
endeavouros-mirrorlist/: endeavouros-mirrorlist
endeavouros-skel-i3wm/: PKGBUILD
eos-apps-info/: PKGBUILD  eos-apps-info  eos-apps-info-1.2.5-1-any.pkg.tar.zst  eos-apps-info-collect  eos-apps-info-helper
eos-bash-shared/: ChangeDisplayResolution  PKGBUILD  README.md  RunInTerminal  RunInTerminalEx  RunInTerminalOpt  eos-pacdiff  (+14 more)
(+897 files in other folders)
